syntax = "proto3";

option csharp_namespace = "CatalogService";

import "google/protobuf/wrappers.proto"; 

service Catalog {
  rpc UpdateBookStock(UpdateBookStockRequest) returns (UpdateBookStockResponse);
  rpc GetBook(GetBookRequest) returns (GetBookResponse);
}

message UpdateBookStockRequest {
  string book_id = 1; 
  int32 quantity = 2;
}

message UpdateBookStockResponse {
  bool success = 1;
}

message GetBookRequest {
  string book_id = 1;
}

message GetBookResponse {
  string book_id = 1; 
  string title = 2;
  int32 stock = 3;
  google.protobuf.StringValue description = 4; 
  double price = 5; 
}